tests/ui/feature-gates/feature-gate-repr-scalable.stderr
error[E0658]: scalable vector types are experimental
  --> $DIR/feature-gate-repr-scalable.rs:3:1
   |
LL | #[repr(simd, scalable(16))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(repr_scalable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0076]: SIMD vector's only field must be an array
  --> $DIR/feature-gate-repr-scalable.rs:4:1
   |
LL | struct Foo {
   | ^^^^^^^^^^
LL |     _ty: [i8],
   |     --------- not an array

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0076, E0658.
For more information about an error, try `rustc --explain E0076`.
